<resources>
    <string name="app_name">Espacio Metrónomo</string>

    <!-- Strings used for fragments for navigation -->
    <string name="action_bookings">Reservas</string>
    <string name="action_program">Programa</string>
    <string name="action_date">Fechas importantes</string>
    <string name="action_location">Localización</string>
    <string name="booking_btn">Hacer Reserva</string>
    <string name="booking_show_btn">Ver</string>
    <string name="booking_form_title">Haga su reserva aquí</string>
    <string name="nameInput">Nombre</string>
    <string name="nameHint">Nombre</string>
    <string name="dniHint">DNI</string>
    <string name="reasonEditText">Motivo</string>
    <string name="phoneEditText">Teléfono</string>
    <string name="emailEditText">Email</string>
    <string name="dateFormat">dd/mm/yyyy</string>
    <string name="hourFormat">hh:mm</string>
    <string name="sendFormBooking">Enviar Reserva</string>
    <string name="type1">Básica</string>
    <string name="type2">Grande</string>
    <string name="type3">Vip</string>
    <string name="booking_view_title">Descripción de la Reserva</string>
    <string name="booking_room_title">Sala</string>
    <string name="booking_name_label">Nombre:</string>
    <string name="booking_dni_label">DNI:</string>
    <string name="booking_phone_label">Teléfono</string>
    <string name="booking_email_label">Email:</string>
    <string name="booking_date_label">Fecha:</string>
    <string name="booking_start_hour_label">Hora de Entrada:</string>
    <string name="booking_end_hour_label">Hora de Salida:</string>
    <string name="booking_reason_label">Motivo:</string>
    <string name="edit_booking_button">Editar reserva</string>
    <string name="delete_booking_button">Eliminar</string>
    <string name="reasonLabel">Razón de la reserva:</string>
    <string name="action_test">Test</string>
    <string name="important_bookings_title">Reservas destacables</string>
    <string name="titulo_item_localizacion">Contacto</string>
    <string name="telefono_item_localizacion">697479723</string>
    <string name="direccion_item_localizacion">Av. Cayetano del Toro, 14, Cádiz</string>
    <string name="correo_item_localizacion">espacio.metronomo@gmail.com</string>
    <string name="title_activity_maps">Map</string>
    <string name="horario">Horario: 8:00 - 22:00</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="title_activity_location">Location</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>