<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.uca.espaciometronomo.BookingMainActivity">
    <item
        android:id="@+id/action_books"
        android:orderInCategory="100"
        android:title="@string/action_bookings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_program"
        android:orderInCategory="100"
        android:title="@string/action_program"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_dates"
        android:orderInCategory="100"
        android:title="@string/action_date"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_location"
        android:orderInCategory="100"
        android:title="@string/action_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_test"
        android:orderInCategory="100"
        android:title="@string/action_test"
        app:showAsAction="never" />
</menu>